# brickend

./: README.md  brickend-flujo-vision.md  package.json  repo-file-tree  tsconfig.base.json
demo/: .gitignore  (+1 more)
python/brickend_python/: .gitignore  README.md  pyproject.toml  setup.cfg
python/brickend_python/brickend_cli/: main.py
python/brickend_python/brickend_cli/commands/: add_entity.py  generate_code.py  init_command.py  init_project.py  migrate_db.py
python/brickend_python/brickend_core/config/: validation_schemas.py
python/brickend_python/brickend_core/engine/: __init__.py  code_generator.py  context_builder.py  protected_regions.py  template_engine.py  template_registry.py
python/brickend_python/brickend_core/utils/: naming.py  yaml_loader.py
python/brickend_python/src/brickend_cli/: main.py
python/brickend_python/src/brickend_cli/commands/: add_entity.py  generate_code.py  init_project.py  migrate_db.py  validate.py
python/brickend_python/src/brickend_core/config/: project_schema.py  validation_schemas.py
python/brickend_python/tests/cli/: test_add_entity.py  test_add_entity_negative.py  test_generate_code.py  test_generate_code_negative.py  test_init_command.py  test_init_project.py  test_migrate_db.py  test_validate.py
python/brickend_python/tests/core/: test_code_generator.py  test_context_builder.py  test_jinja_syntax.py  test_naming.py  test_protected_regions.py  test_template_engine.py  test_template_registry.py  test_validation_schemas.py  test_yaml_loader.py
python/brickend_python/tests/integrations/: test_alembic_rollback.py
(+82 files in other folders)
