[project]
name = "brickend_python"
version = "0.1.0"
description = "Core engine and CLI to generate FastAPI projects from entities defined in YAML"
authors = []
license = { text = "" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "jinja2>=3.1,<4.0",
  "pydantic>=1.10,<2.0",
  "ruamel.yaml>=0.17,<1.0",
]

[build-system]
requires = ["setuptools>=60.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
